--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_history">History</string>
     <string name="title_flights">Flights</string>
     <string name="title_profile">Profile</string>
+    <string name="login_page">Login Page</string>
+    <string name="register_page">Register Page</string>
 </resources>
