--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_profile">Profile</string>
     <string name="login_page">Login Page</string>
     <string name="register_page">Register Page</string>
+    <string name="title_reviews">Reviews</string>
 </resources>
