--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="login_page">Login Page</string>
     <string name="register_page">Register Page</string>
     <string name="title_reviews">Reviews</string>
+    <string name="about_us">About Us</string>
 </resources>
